Add NumberField component

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "Sass",
     "Storybook"
   ],
-  "author": "Harvey Delaney",
+  "author": "RC",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/rcdexta/react-input-inline/issues"
